@@ -123,6 +123,7 @@ We'll add it back when project opening functionality is working.
                         --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-exports org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
@@ -139,6 +140,7 @@ We'll add it back when project opening functionality is working.
                         --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-opens javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-opens org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
@@ -217,6 +219,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
@@ -240,6 +244,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-opens</option>
@@ -297,6 +303,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
@@ -320,6 +328,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.util=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.logging=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-opens</option>
